# main

./: .gitignore  CMakeLists.txt  main.c
algorithms/: CMakeLists.txt
algorithms/array/: CMakeLists.txt  array.c  array.h
algorithms/universal/: CMakeLists.txt  universal.c  universal.h
data_structures/: CMakeLists.txt
data_structures/bitset/: CMakeLists.txt  bitset.c  bitset.h
data_structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
data_structures/ordered_array_set/: CMakeLists.txt  ordered_array_set.c  ordered_array_set.h
data_structures/string_/: CMakeLists.txt  string_.c  string_.h
data_structures/unordered_array_set/: CMakeLists.txt  unordered_array_set.c  unordered_array_set.h
